--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@ title: Home
 <!-- ========== BIO ========== -->
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
-  <p>
-I am a Ph.D. Candidate at <a href=https://www.cics.umass.edu/ target="_blank" style="color:rgb(0, 0, 0)">CICS, University of Massachusetts Amherst</a>.
-My research applies probabilistic machine learning techniques to problems in Differential Privacy and AI for science. 
-Some problems I have worked on include: private data synthesis, private query answering, and modeling bird migration.
-My advisor is <a href=https://people.cs.umass.edu/~sheldon/ target="_blank" style="color:rgb(0, 0, 0)">Prof. Daniel Sheldon</a>.
- </p>
-
+<p>
+I am a Ph.D. candidate in Computer Science at <a href="https://www.cics.umass.edu/" target="_blank" style="color:rgb(0, 0, 0)">UMass Amherst</a>, expected to graduate in May 2026. My research combines probabilistic machine learning and differential privacy to develop methods that enhance data utility while preserving privacy across diverse applications. I have published at leading conferences including NeurIPS and AISTATS, and contributed open-source tools supporting privacy-preserving data analysis. Under the supervision of <a href="https://people.cs.umass.edu/~sheldon/" target="_blank" style="color:rgb(0, 0, 0)">Prof. Daniel Sheldon</a>, I aim to translate theoretical advances into practical, scalable solutions. I am seeking Research Scientist roles where I can apply my expertise to challenges in data privacy, generative modeling, and beyond. Open to relocation or remote opportunities.
+</p>
 </div>
 
 
